blogEntity
